SnakeBuilder implemented. Collects snake as linked list from head to tail.
Lee algorithm upgraded to move tail by one point each step. This allows to solve situations when tail temporarily blocks apple but unblocks it till head gets closer