@@ -4,12 +4,15 @@ import static com.codenjoy.dojo.games.knibert.solver.BoardModel.APPLE;
 import static com.codenjoy.dojo.games.knibert.solver.BoardModel.BARRIER;
 import static com.codenjoy.dojo.games.knibert.solver.BoardModel.EMPTY;
 import static com.codenjoy.dojo.games.knibert.solver.BoardModel.HEAD;
-import static com.codenjoy.dojo.games.knibert.solver.BoardModel.SNAKE_TAIL;
+import static com.codenjoy.dojo.games.knibert.solver.BoardModel.SNAKE_STEP;
 import static com.codenjoy.dojo.games.knibert.solver.BoardModel.STONE;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.mock;
 
+import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
 import com.codenjoy.dojo.games.knibert.Board;
 import com.codenjoy.dojo.services.Point;
@@ -31,7 +34,6 @@ class BoardModelTest {
 
   @BeforeEach
   void setup() {
-    doReturn(mock(Point.class)).when(board).getHead();
     subject = new BoardModel(board);
   }
 
@@ -39,9 +41,9 @@ class BoardModelTest {
   @DisplayName("setEnvironment - copies barriers to model")
   void setEnvironment_setsBarriers() {
     // given
-    Point barrier1 = new PointImpl(2,2);
-    Point barrier2 = new PointImpl(4,1);
-    Point barrier3 = new PointImpl(10,7);
+    Point barrier1 = new PointImpl(2, 2);
+    Point barrier2 = new PointImpl(4, 1);
+    Point barrier3 = new PointImpl(10, 7);
     doReturn(List.of(barrier1, barrier2, barrier3))
         .when(board).getBarriers();
 
@@ -55,45 +57,44 @@ class BoardModelTest {
   }
 
   @Test
-  @DisplayName("setEnvironment - copies snake to model")
-  void setEnvironment_setsSnake() {
+  @DisplayName("setSnake - saves snake")
+  void setSnake_setsSnake() {
     // given
-    Point snake1 = new PointImpl(4,8);
-    Point snake2 = new PointImpl(5,8);
-    Point snake3 = new PointImpl(5,7);
-    doReturn(List.of(snake1, snake2, snake3))
-        .when(board).getHero();
+    Point snake1 = new PointImpl(4, 8);
+    Point snake2 = new PointImpl(5, 8);
+    Point snake3 = new PointImpl(5, 7);
+    LinkedList<Point> snake = new LinkedList<>(Arrays.asList(snake1, snake2, snake3));
 
     // when
-    subject.setEnvironment(board);
+    subject.setSnake(snake);
 
     // then
-    assertEquals(SNAKE_TAIL, subject.get(snake1));
-    assertEquals(SNAKE_TAIL, subject.get(snake2));
-    assertEquals(SNAKE_TAIL, subject.get(snake3));
+    assertEquals(snake, subject.getSnake());
   }
 
   @Test
-  @DisplayName("setEnvironment - copies snake head to model")
-  void setEnvironment_setsSnakeHead() {
+  @DisplayName("setSnake - copies snake to model")
+  void setSnake_setsSnakeToField() {
     // given
-    Point head = new PointImpl(10,10);
-    doReturn(head)
-        .when(board).getHead();
+    Point head = new PointImpl(10, 10);
+    Point tail1 = new PointImpl(9, 10);
+    Point tail2 = new PointImpl(8, 10);
 
     // when
-    subject.setEnvironment(board);
+    subject.setSnake(new LinkedList<>(Arrays.asList(head, tail1, tail2)));
 
     // then
     assertEquals(HEAD, subject.get(head));
+    assertEquals(HEAD + SNAKE_STEP, subject.get(tail1));
+    assertEquals(HEAD + (SNAKE_STEP * 2), subject.get(tail2));
   }
 
   @Test
   @DisplayName("setEnvironment - copies apples to model")
   void setEnvironment_setsApples() {
     // given
-    Point apple1 = new PointImpl(3,9);
-    Point apple2 = new PointImpl(10,2);
+    Point apple1 = new PointImpl(3, 9);
+    Point apple2 = new PointImpl(10, 2);
     doReturn(List.of(apple1, apple2))
         .when(board).getApples();
 
@@ -109,8 +110,8 @@ class BoardModelTest {
   @DisplayName("setEnvironment - copies stones to model")
   void setEnvironment_setsStones() {
     // given
-    Point stone1 = new PointImpl(3,9);
-    Point stone2 = new PointImpl(10,2);
+    Point stone1 = new PointImpl(3, 9);
+    Point stone2 = new PointImpl(10, 2);
     doReturn(List.of(stone1, stone2))
         .when(board).getStones();
 
@@ -128,8 +129,8 @@ class BoardModelTest {
     // given
     int value1 = 20;
     int value2 = -50;
-    Point point1 = new PointImpl(3,9);
-    Point point2 = new PointImpl(10,2);
+    Point point1 = new PointImpl(3, 9);
+    Point point2 = new PointImpl(10, 2);
     subject.set(point1, value1);
     subject.set(point2, value2);
 
@@ -144,8 +145,8 @@ class BoardModelTest {
     // given
     int value1 = -35;
     int value2 = 90;
-    Point point1 = new PointImpl(2,7);
-    Point point2 = new PointImpl(11,11);
+    Point point1 = new PointImpl(2, 7);
+    Point point2 = new PointImpl(11, 11);
 
     // when
     subject.set(point1, value1);
@@ -162,16 +163,16 @@ class BoardModelTest {
   void isEmpty_checksIfEmptyCell() {
     // given
     int otherValue = 9;
-    Point head = new PointImpl(1,1);
-    Point snake = new PointImpl(1,2);
-    Point barrier = new PointImpl(1,3);
-    Point apple = new PointImpl(1,4);
-    Point stone = new PointImpl(1,5);
-    Point other = new PointImpl(1,6);
-    Point empty = new PointImpl(1,7);
-    Point notSet = new PointImpl(1,8);
+    Point head = new PointImpl(1, 1);
+    Point snake = new PointImpl(1, 2);
+    Point barrier = new PointImpl(1, 3);
+    Point apple = new PointImpl(1, 4);
+    Point stone = new PointImpl(1, 5);
+    Point other = new PointImpl(1, 6);
+    Point empty = new PointImpl(1, 7);
+    Point notSet = new PointImpl(1, 8);
     subject.set(head, HEAD);
-    subject.set(snake, SNAKE_TAIL);
+    subject.set(snake, HEAD + SNAKE_STEP + SNAKE_STEP);
     subject.set(barrier, BARRIER);
     subject.set(apple, APPLE);
     subject.set(stone, STONE);
@@ -194,16 +195,16 @@ class BoardModelTest {
   void isApple_returnsIfApple() {
     // given
     int otherValue = 9;
-    Point head = new PointImpl(1,1);
-    Point snake = new PointImpl(1,2);
-    Point barrier = new PointImpl(1,3);
-    Point apple = new PointImpl(1,4);
-    Point stone = new PointImpl(1,5);
-    Point other = new PointImpl(1,6);
-    Point empty = new PointImpl(1,7);
-    Point notSet = new PointImpl(1,8);
+    Point head = new PointImpl(1, 1);
+    Point snake = new PointImpl(1, 2);
+    Point barrier = new PointImpl(1, 3);
+    Point apple = new PointImpl(1, 4);
+    Point stone = new PointImpl(1, 5);
+    Point other = new PointImpl(1, 6);
+    Point empty = new PointImpl(1, 7);
+    Point notSet = new PointImpl(1, 8);
     subject.set(head, HEAD);
-    subject.set(snake, SNAKE_TAIL);
+    subject.set(snake, HEAD + SNAKE_STEP + SNAKE_STEP);
     subject.set(barrier, BARRIER);
     subject.set(apple, APPLE);
     subject.set(stone, STONE);
@@ -219,5 +220,16 @@ class BoardModelTest {
     assertFalse(subject.isApple(other));
     assertFalse(subject.isApple(empty));
     assertFalse(subject.isApple(notSet));
+  }
+
+  @Test
+  @DisplayName("clear - removes point value")
+  void clear_removesValue() {
+    Point point = new PointImpl(2, 2);
+    subject.set(point, HEAD);
+
+    // when & then
+    subject.clear(point);
+    assertTrue(subject.isEmpty(point));
   }
 }
